<resources>
    <string name="app_name">Technica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Technica Application</string>
    <string name="nav_header_subtitle">Technica</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_introductie">Introductie</string>
    <string name="menu_sponsors">Partners</string>
    <string name="menu_kalender">Kalender</string>
    <string name="menu_praesidium">Praesidium</string>
    <string name="menu_clublied">Clublied</string>
    <string name="menu_vacatures">Vacatures</string>
    <string name="menu_hulp">Hulp</string>

    <string name="home">Faculteitsvereniging Antwerpen</string>
    <string name="richtingen">Elektromechanica "\t" Elektronica-ICT "\n" Energiemanagement "\t" Integrale Veiligheid</string>

    <string name="voorwoord">
        Ik had mezelf voorgenomen dat studentenverenigingen niets voor mij waren,
        tot op het moment dat een paar goede vrienden mij uiteindelijk overtuigden om het toch maar eens te proberen.
        Nu twee jaar later sta ik aan het hoofd van deze mooie familie voor het komende academiejaar.
        Nog geen seconde heb ik hier spijt van gehad! "\n" "\n"
        Iedereen heeft de keuze om steunend lid te worden of om zich te laten dopen.
        Bij beide keuzes ondersteunen we je met onze hulp, samenvattingen, …
        De kortingen die aan je lidkaart verbonden zijn, zijn natuurlijk ook mooi meegenomen! "\n" "\n"
        Nog steeds benieuwd naar wat alles juist inhoud?
        Aarzel dan niet om iemand van het praesidium aan te spreken;
        we hebben het allemaal meegemaakt en kunnen het je dus in geuren en kleuren uitleggen! Hopelijk tot snel!
        "\n" "\n" ~Kevin Davis - Praeses~
    </string>

    <string name="clublied" >
        De beste studenten van Boom die zijn hier, "\n"
        met hun magen reusachtig en droog. "\n""\n"
        De leraars die sidderen en vluchten van angst, "\n"
        als wij stormen zo wild naar den toog. "\n" "\n"
        En komt hier gij vriend, drink met ons een pint, "\n"
        want pas dan zijn wij allen tevreden. "\n" "\n"
        Ja, wij zijn de heersers van Boom, "\n"
        De mannen van Technica. "\n" "\n"
        En Technica (en Technica), "\n"
        En Technica (en Technica), "\n"
        En Technica (en Technica), "\n"
        En Technica, HOI, HOI "\n" "\n"
        Ja, wij zijn de heersers van Boom, "\n"
        De mannen van Technica.
    </string>
    <string name="clublied_button">BELUISTER HIER HET CLUBLIED</string>

    <string name="sponsor_website_button">BEZOEK DE WEBSITE</string>
    <string name="sponsor_vacature_button">BEKIJK DE VACATURES</string>

    <string name="hulp_mail">info@technica-antwerpen.be</string>
    <string name="hulp_call">+32 (0)485 50 12 97</string>
    <string name="hulp_maps">Ellermanstraat 33 2060 Antwerpen</string>
    <string name="hulp_rules">Technica Statuten</string>
    <string name="hulp_copyright">Issued under the Apache License 2.0 \u00a9</string><!-- Apache License 2.0 & MIT License -->
    <string name="hulp_developers">Made by \n Kevin Davis &amp; Thomas Kramp \n Designed by Evi Claes</string>
    <string name="image_description">TODO</string>

</resources>
