<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_introductie"
            android:icon="@drawable/ic_menu_club"
            android:title="@string/menu_introductie" />
        <item
            android:id="@+id/nav_clublied"
            android:icon="@drawable/ic_menu_clublied"
            android:title="@string/menu_clublied" />
        <item
            android:id="@+id/nav_praesidium"
            android:icon="@drawable/ic_praesidium"
            android:title="@string/menu_praesidium" />
        <item
            android:id="@+id/nav_kalender"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_kalender" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_partners"
            android:title="@string/menu_sponsors" />
        <item
            android:id="@+id/nav_vacatures"
            android:icon="@drawable/ic_vacatures"
            android:title="@string/menu_vacatures" />

    </group>

</menu>
